testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case12.expect.out
error: expected '{' in unicode escape, found '1'
  ==> case12.cj:15:15:
   | 
15 |     cangjie ${"\u123"}
   |                ~~^ expected '{'
   |                |
   |                because it is in this Unicode escape
   | 

1 error generated, 1 error printed.
